--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "babel-preset-react": "*",
     "nodemon": "*",
     "webpack": "^4.1.1",
-    "webpack-dev-middleware": "^3.0.1"
+    "webpack-dev-middleware": "^3.0.1",
+    "webpack-hot-middleware": "^2.21.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
